# lgl

./: .gitignore  Cargo.toml
gl4_6_core/: .gitignore  Cargo.toml  build.rs
gl_generator/: Cargo.toml  lib.rs
gl_generator/generators/: debug_struct_gen.rs  global_typed_gen.rs  mod.rs
gl_generator/generators/templates/types/: egl.rs  gl.rs  glx.rs  wgl.rs
gl_generator/registry/: mod.rs  parse.rs
lgl/: Cargo.toml
lgl/src/: debug.rs  helper.rs  main.rs
lgl/src/shader/: test.frag  test.vert
